# adwaita-icon-theme-legacy

./: NEWS  README.md  adwaita-icon-theme-legacy.doap  index.theme  meson.build
